force-app/main/default/objects/Footfall_DMO__dlm/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>city</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>city</labelOverride>
        <masterLabel>city</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>