force-app/main/default/objects/Footfall_DMO__dlm/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <label>date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>date</labelOverride>
        <masterLabel>date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>