force-app/main/default/objects/Footfall_DMO__dlm/fields/footfall_daily_avg__c.field-meta.xml
<CustomField>
    <fullName>footfall_daily_avg__c</fullName>
    <label>footfall_daily_avg</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>footfall_daily_avg</labelOverride>
        <masterLabel>footfall_daily_avg</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>