force-app/main/default/objects/Footfall_DMO__dlm/fields/footfall_max_regional__c.field-meta.xml
<CustomField>
    <fullName>footfall_max_regional__c</fullName>
    <label>footfall_max_regional</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>footfall_max_regional</labelOverride>
        <masterLabel>footfall_max_regional</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>