force-app/main/default/objects/Footfall_DMO__dlm/fields/location_name__c.field-meta.xml
<CustomField>
    <fullName>location_name__c</fullName>
    <label>location_name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>location_name</labelOverride>
        <masterLabel>location_name</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>