force-app/main/default/objects/Footfall_DMO__dlm/fields/longitude__c.field-meta.xml
<CustomField>
    <fullName>longitude__c</fullName>
    <label>longitude</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>longitude</labelOverride>
        <masterLabel>longitude</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>