force-app/main/default/objects/Footfall_DMO__dlm/fields/peak_hour_count__c.field-meta.xml
<CustomField>
    <fullName>peak_hour_count__c</fullName>
    <label>peak_hour_count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>peak_hour_count</labelOverride>
        <masterLabel>peak_hour_count</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>